--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "razorpay": "^2.9.4",
+    "react-toastify": "^10.0.5",
     "stripe": "^16.12.0",
     "validator": "^13.12.0"
   }
